fix opcache routes

--- a/src/.env.example
+++ b/src/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+OPCACHE_URL=http://localhost
 
 APP_LOCALE=ru
 APP_FALLBACK_LOCALE=en
