155. update filament to v4 (WIP)

--- a/src/composer.json
+++ b/src/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^8.3",
         "appstract/laravel-opcache": "^4.0",
-        "bezhansalleh/filament-shield": "^3.3",
+        "bezhansalleh/filament-shield": "^4.0",
         "calebporzio/sushi": "^2.5",
         "ddeboer/imap": "^1.19",
         "defstudio/telegraph": "^1.57",
@@ -33,9 +33,8 @@
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.9",
         "facebook/php-business-sdk": "^19.0",
-        "filament/filament": "^3.3",
-        "filament/spatie-laravel-media-library-plugin": "^3.2",
-        "filipfonal/filament-log-manager": "^2.1",
+        "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
         "giggsey/libphonenumber-for-php": "^8.13",
         "guzzlehttp/guzzle": "^7.9",
         "jenssegers/agent": "^2.6",
@@ -49,7 +48,7 @@
         "laravie/serialize-queries": "^3.2",
         "league/flysystem-aws-s3-v3": "^3.29",
         "maatwebsite/excel": "^3.1",
-        "mokhosh/filament-rating": "^1.4",
+        "mokhosh/filament-rating": "^2.0",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "phpoffice/phpspreadsheet": "^1.30",
         "picqer/php-barcode-generator": "^2.4",
@@ -65,6 +64,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
+        "filament/upgrade": "^4.0",
         "larastan/larastan": "^3.1",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
