--- a/src/composer.json
+++ b/src/composer.json
@@ -21,6 +21,7 @@
     ],
     "require": {
         "php": "^8.3",
+        "achyutn/filament-log-viewer": "^1.3",
         "appstract/laravel-opcache": "^4.0",
         "bezhansalleh/filament-shield": "^4.0",
         "calebporzio/sushi": "^2.5",
