media to S3 - WIP

--- a/src/.env.example
+++ b/src/.env.example
@@ -118,3 +118,11 @@ HGROSH_API_URL='https://api-epos.hgrosh.by/public/v1'
 COMPOSE_PROJECT_NAME=barocco
 WWWUSER=1000
 WWWGROUP=1000
+
+MEDIA_DISK=media
+MEDIA_ACCESS_KEY_ID=
+MEDIA_SECRET_ACCESS_KEY=
+MEDIA_REGION=BTC
+MEDIA_BUCKET=media
+MEDIA_ENDPOINT=https://storage-403.s3hoster.by
+MEDIA_USE_PATH_STYLE_ENDPOINT=false
