--- a/src/phpstan-baseline.neon
+++ b/src/phpstan-baseline.neon
@@ -3553,12 +3553,6 @@ parameters:
 			path: app/Models/User/Address.php
 
 		-
-			message: '#^Constant App\\Models\\User\\Device\:\:TYPES type has no value type specified in iterable type array\.$#'
-			identifier: missingType.iterableValue
-			count: 1
-			path: app/Models/User/Device.php
-
-		-
 			message: '#^Method App\\Models\\User\\Device\:\:orders\(\) return type with generic class Illuminate\\Database\\Eloquent\\Relations\\HasMany does not specify its types\: TRelatedModel, TDeclaringModel$#'
 			identifier: missingType.generics
 			count: 1
@@ -4385,6 +4379,12 @@ parameters:
 			identifier: deadCode.unreachable
 			count: 3
 			path: app/Services/Payment/PaymentService.php
+
+		-
+			message: '#^Call to an undefined method App\\Contracts\\ClientInterface\<covariant Illuminate\\Database\\Eloquent\\Model\>\:\:toArray\(\)\.$#'
+			identifier: method.notFound
+			count: 1
+			path: app/Services/SaleService.php
 
 		-
 			message: '#^Method App\\Services\\SearchService\:\:generateSearchQuery\(\) has parameter \$query with generic class Illuminate\\Database\\Eloquent\\Builder but does not specify its types\: TModel$#'
