--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,7 +20,8 @@ jobs:
   laravel-tests-and-deploy:
 
     runs-on: ubuntu-24.04
-    environment: production
+    # environment: production
+    environment: old_prod
     defaults:
       run:
         working-directory: ./src
