temp disable sentry

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -83,14 +83,14 @@ jobs:
         chmod 700 ~/.ssh/deploy
         php ./vendor/bin/dep deploy ${{ inputs.deploy_params }}
 
-    - name: Create Sentry release
-      uses: getsentry/action-release@v3
-      env:
-        SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-        SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-        SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
-      with:
-        environment: production
+    # - name: Create Sentry release
+    #   uses: getsentry/action-release@v3
+    #   env:
+    #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+    #     SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+    #     SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+    #   with:
+    #     environment: production
 
     - name: Escape commit message (remove < and > only)
       id: escape
