--- a/src/.env.example
+++ b/src/.env.example
@@ -70,10 +70,14 @@ MAIL_FROM_ADDRESS=info@barocco.by
 MAIL_FROM_NAME="${APP_NAME}"
 BACKUP_INFO_MAIL_TO=
 
-ACTIVE_STORAGE_ACCESS_KEY_ID=
-ACTIVE_STORAGE_SECRET_ACCESS_KEY=
-ACTIVE_STORAGE_BUCKET=
-ACTIVE_STORAGE_ENDPOINT=
+MEDIA_DISK=media
+HOSTER_ACCESS_KEY_ID=
+HOSTER_SECRET_ACCESS_KEY=
+HOSTER_REGION=A1
+HOSTER_ENDPOINT=https://storage-617.s3hoster.by
+HOSTER_USE_PATH_STYLE_ENDPOINT=false
+MEDIA_BUCKET=media
+BACKUP_BUCKET=backup
 
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_CHAT_ID=
@@ -118,11 +122,3 @@ HGROSH_API_URL='https://api-epos.hgrosh.by/public/v1'
 COMPOSE_PROJECT_NAME=barocco
 WWWUSER=1000
 WWWGROUP=1000
-
-MEDIA_DISK=media
-MEDIA_ACCESS_KEY_ID=
-MEDIA_SECRET_ACCESS_KEY=
-MEDIA_REGION=BTC
-MEDIA_BUCKET=media
-MEDIA_ENDPOINT=https://storage-403.s3hoster.by
-MEDIA_USE_PATH_STYLE_ENDPOINT=false
